# ZxMem

./: CMakeLists.txt  CMakeMycfg.cmake  README.md  xmake.lua  xmake_open_vs.bat
include/ZxMem/: Platform.h  ZxMem.h
src/: CMakeLists.txt  Platform.cpp  ZxMem.cpp
src/ZxMem/: ZxMem.cpp
src/include/ZxMem/: Platform.h  ZxMem.h
src/src/Zut/: ZxMem.h
src/src/Zut/ZxMem/: Plat.cpp  Plat.h  Reflect.h  Traits.h  ZxMem.cpp  ZxMem.h  ZxMemReflex.h
src/src/Zut/ZxMem/Reflex/: BinaryField.h  Field.h  Reflex.h  ZxReflex.h
src/src/ZxMem/: Platform.cpp  ZxMem.cpp
test/: CMakeLists.txt  main.cpp
test/Reflect_Test/: CMakeLists.txt  main.cpp
test/Reflex_Test/: CMakeLists.txt  main.cpp
test/ZxMem_Test/: CMakeLists.txt  main.cpp
